<resources>
    <string name="locale_title">Select Language</string>
    <string name="weeklysports_title">Weekly activity</string>
    <string name="weeklysports_totalnumber_front">Total workout</string>
    <string name="weeklysports_totalstep_front">Walked</string>
    <string name="weeklysports_totaltime">Total elapsed time</string>
    <string name="weeklysports_totaltime_unit">/</string>
    <string name="weeklysports_totalcalories">Total calories</string>
    <string name="weeklysports_totalcalories_unit">kCal</string>
    <string name="weeklysports_totalmileage">Total distance</string>
    <string name="weeklysports_totalmileage_unit_zh">km</string>
    <string name="weeklysports_totalmileage_unit_en">mi</string>
    <string name="weeklysports_averageheart">Ave heart rate</string>
    <string name="weeklysports_averageheart_unit">bpm</string>
    <string name="weeklysports_runerrate">Running pace</string>
    <string name="weeklysports_outdoorrunrate">Outdoor run ave pace</string>
    <string name="weeklysports_insiderunrate">Indoor run ave pace</string>
    <string name="weeklysports_crossrunrate">Cross-country run ave pace</string>
    <string name="weeklysports_runerrate_unit_zh">/km</string>
    <string name="weeklysports_runerrate_unit_en">/mi</string>
    <string name="weeklysports_ridingrate">Biking speed</string>
    <string name="weeklysports_outdoorriding_average">Outdoor bike ave speed</string>
    <string name="weeklysports_outdoorriding_max">Outdoor bike max speed</string>
    <string name="weeklysports_outdoorriding_unit_zh">km/h</string>
    <string name="weeklysports_outdoorriding_unit_en">mi/h</string>
    <string name="weeklysports_classify_frequency" />
    <string name="weeklysports_day" />
    <string name="weeklysports_activity">Move</string>
    <string name="weeklysports_running">Run</string>
    <string name="weeklysports_walking">Walk</string>
    <string name="weeklysports_riding">Bike</string>
    <string name="weekly_step_attained_rate">Days to reach step goal</string>
    <string name="weekly_sports_notification_content">Activity summary from last week is ready.</string>
    <string name="weeklysports_date_format">yyyy MM/dd</string>
    <string name="widget_currentstep_title">Data Center</string>
    <string name="widget_currentstep_activities">Steps today</string>
    <string name="widget_currentstep_sleep_hour">h</string>
    <string name="widget_currentstep_sleep_min">min</string>
    <string name="widget_currentstep_sleep_title">Sleep last night</string>
    <string name="widget_currentstep_sleep_no">No sleep data</string>
    <string name="widget_currentstep_activity_no">No exercise today?</string>
    <string name="currentstep_detail_activity">Activity</string>
    <string name="currentstep_detail_running">Run</string>
    <string name="currentstep_detail_walking">Walk</string>
    <string name="currentstep_detail_riding">Ride</string>
    <string name="currentstep_detail_calories">Consumption</string>
    <string name="currentstep_detail_sleep">Sleep</string>
    <string name="currentstep_detail_sleep_deep">Deep sleep</string>
    <string name="currentstep_detail_heart">Heart rate</string>
    <string name="currentstep_detail_title">Data details</string>
    <string name="currentstep_detail_activity_chart">Motion profile</string>
    <string name="currentstep_detail_activity_chart_unit">(Unit: hours)</string>
    <string name="currentstep_detail_activity_step_done">Reached standard</string>
    <string name="currentstep_detail_activity_step_notdo">Not reached</string>
    <string name="currentstep_detail_activity_run_rate_av">Ave speed</string>
    <string name="currentstep_detail_activity_run_rate_ma">Max speed</string>
    <string name="currentstep_detail_activity_walk_ridding_rate_av">Ave speed</string>
    <string name="currentstep_detail_activity_walk_ridding_rate_ma">Max speed</string>
    <string name="currentstep_detail_heart_rate_max_text">Max</string>
    <string name="currentstep_detail_heart_rate_min_text">Min</string>
    <string name="currentstep_detail_heart_rate_quiet_text">Resting</string>
    <string name="currentstep_detail_step_unit">steps</string>
    <string name="currentstep_detail_calories_unit">kCal</string>
    <string name="currentstep_detail_sleep_hour">h</string>
    <string name="currentstep_detail_sleep_min">min</string>
    <string name="currentstep_detail_heart_unit">bpm</string>
    <string name="currentstep_detail_walk_ridding_rate_unit_zh">km/h</string>
    <string name="currentstep_detail_walk_ridding_rate_unit_en">mi/h</string>
    <string name="currentstep_detail_distance_unit_zh">km</string>
    <string name="currentstep_detail_distance_unit_en">mi</string>
    <string name="step_value">%1$s / %2$s</string>
    <string name="detail_date">%1$s motion profile</string>
    <string name="widget_weeklyreports_heart_rate_min_text">Min heart rate</string>
    <string name="widget_weeklyreports_heart_rate_max_text">Max heart rate</string>
    <string name="widget_weeklyreports_heart_rate_title">Heart rate</string>
    <string name="widget_weeklyreports_average_title">Average</string>
    <string name="widget_weeklyreports_totalcalory_front">Total cal</string>
    <string name="widget_weeklyreports_totalcalory_title">Consumption</string>
    <string name="widget_weeklyreports_sports_title">Movement</string>
    <string name="widget_weeklyreports_reports_title">Weekly</string>
    <string name="widget_weeklyreports_reports_review">Weekly Review</string>
    <string name="widget_sleep_title">Sleep</string>
    <string name="widget_sleep_late">Late sleep</string>
    <string name="widget_sleep_deep_leak">Short deep sleep</string>
    <string name="widget_sleep_leak">Lack of sleep</string>
    <string name="widget_sleep_easyawake">Easy wake up</string>
    <string name="widget_sleep_average_calories">Daily ave %1$s kCal</string>
    <string name="widget_sleep_totaltime">Total sleep %1$s h %2$s min</string>
    <string name="widget_sleep_attained_unit">min</string>
    <string name="widget_weeklyreports_nodata">No data for last week</string>
    <string name="action_badge_activated">com.huami.watch.health.BADGE_ACTIVATED</string>
    <string name="action_badge_dumped">com.huami.watch.health.BADGE_DUMPED</string>
    <string name="app_name">Health</string>
    <string name="label_heartrate">Heart rate</string>
    <string name="label_heartrate_unit">bpm</string>
    <string name="ratio_notworn">Not wearing watch</string>
    <string name="heartrate_wear_before_gauging">Please wear the watch before gauging</string>
    <string name="label_active_fast">Anaerobic</string>
    <string name="label_active_fast_sick_any">Exercise intensity should be lower than usual when ill, and if any serious symptoms such as a fever occur, exercise should be stopped.</string>
    <string name="label_active_fast_tired_any">Moderate exercise helps to relieve mental fatigue. For physical fatigue, wait until fully recovered to do exercise.</string>
    <string name="label_active_fast_well_bad">For releasing negative emotions, choose gentle activities with entertainment elements to get the best results.</string>
    <string name="label_active_fast_well_good">Neurological and muscle functions will be in sync when in a good mood, which will then productively affect exercise.</string>
    <string name="label_active_fast_well_medium">A short period of high-intensity exercise can promote sports performance and speed, but such exercise is not suitable for long durations, and care should be taken to avoid injury.</string>
    <string name="label_active_normal">Aerobic</string>
    <string name="label_active_normal_sick_any">Exercise intensity should be lower than usual when ill, and if any serious symptoms such as a fever occur, exercise should be stopped.</string>
    <string name="label_active_normal_tired_any">Moderate exercise helps to relieve mental fatigue. For physical fatigue, wait until fully recovered to do exercise.</string>
    <string name="label_active_normal_well_bad">Moderate exercise can transfer negative emotions and relieve stress.</string>
    <string name="label_active_normal_well_good">Neurological and muscle functions will be in sync when in a good mood, which will then productively affect exercise.</string>
    <string name="label_active_normal_well_medium">This is during a moderate-high intensity exercise. It can effectively consume fat and enhance heart and lung functions and is the target exercise area for most people.</string>
    <string name="label_active_slow">Fat-burning</string>
    <string name="label_active_slow_sick_any">Exercise intensity should be lower than usual when ill, and if any serious symptoms such as a fever occur, exercise should be stopped.</string>
    <string name="label_active_slow_tired_any">Moderate exercise helps to relieve mental fatigue. For physical fatigue, wait until fully recovered to do exercise.</string>
    <string name="label_active_slow_well_bad">Moderate exercise can transfer negative emotions and relieve stress.</string>
    <string name="label_active_slow_well_good">Neurological and muscle functions will be in sync when in a good mood, which will then productively affect exercise.</string>
    <string name="label_active_slow_well_medium">This is a moderate intensity exercise interval. A large part of consumption will come from fat, which is an ideal choice for a novice.</string>
    <string name="label_active_xslow">Non-Workout</string>
    <string name="label_active_xslow_sick_any">Exercise intensity should be lower than usual when ill, and if any serious symptoms such as a fever occur, exercise should be stopped.</string>
    <string name="label_active_xslow_tired_any">Moderate exercise helps to relieve mental fatigue. For physical fatigue, wait until fully recovered to do exercise.</string>
    <string name="label_active_xslow_well_bad">Moderate exercise can transfer negative emotions and relieve stress.</string>
    <string name="label_active_xslow_well_medium">For best results, increase exercise intensity and duration until heart rate is within 50-85% of its maximum.</string>
    <string name="label_active_xslow_well_good">Neurological and muscle functions will be in sync when in a good mood, which will then productively affect exercise.</string>
    <string name="label_burning_active">Calories</string>
    <string name="label_burning_basic">Basic</string>
    <string name="label_burning_ratio_today">Consumption ratio</string>
    <string name="label_calory_unit">kCal</string>
    <string name="label_choose_condition">How do you feel?</string>
    <string name="label_choose_mood">How is your mood?</string>
    <string name="label_choose_when">Resting or Workout?</string>
    <string name="label_condition_sick">Sick</string>
    <string name="label_condition_tired">Tired</string>
    <string name="label_condition_well">Relaxed</string>
    <string name="label_heartrate_today">Heart rate curve</string>
    <string name="label_mood_bad">Bad</string>
    <string name="label_mood_good">Good</string>
    <string name="label_mood_medium">Medium</string>
    <string name="label_quiet_fast">Above normal</string>
    <string name="today_heart_rate_value_def">--</string>
    <string name="label_all_day_heartrate">Continuous HR</string>
    <string name="label_all_day_recently">Last</string>
    <string name="label_all_day_quite">Resting</string>
    <string name="measure_heartrate_button_text">Check Now</string>
    <string name="stretch_dialog_title">Stretch time</string>
    <string name="stretch_dialog_subtitle">Too long for today</string>
    <string name="stretch_dialog_content">Reasonable activities can help ease sedentary back stiffness, follow the video to do several sets of office stretching training!</string>
    <string name="widget_label_step_unit">Steps</string>
</resources>