<?xml version="1.0" encoding="utf-8"?>
<com.huami.watch.reports.widget.WeeklyActDistributionView android:orientation="vertical" android:id="@id/weekly_root" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/weeklysports_linear" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@drawable/data_weekly_sport_img_1" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/widget_size_title_value" android:textColor="@color/widget_value_color_white" android:layout_gravity="center_horizontal" android:id="@id/weeklysports_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_weeklyreports_reports_title" />
            <TextView android:layout_gravity="center_horizontal" android:id="@id/weeklysports_period" android:layout_marginTop="6.6999817dip" style="@style/weeklysports_text12sp" />
            <View android:background="@color/widget_title_color_40white" android:layout_width="fill_parent" android:layout_height="0.70000005dip" android:layout_marginTop="20.0dip" />
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="17.0dip">
                <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/data_weekly_sport_title_bg" />
                <TextView android:textSize="@dimen/widget_view_title_size" android:textColor="@color/widget_value_color_white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/widget_weeklyreports_sports_title" />
            </FrameLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="19.299988dip">
                <TextView android:text="@string/weeklysports_activity" android:drawableLeft="@drawable/shape_rect_gray" style="@style/weeklysportsclassify" />
                <TextView android:layout_marginLeft="8.0dip" android:text="@string/weeklysports_running" android:drawableLeft="@drawable/shape_rect_red" style="@style/weeklysportsclassify" />
                <TextView android:layout_marginLeft="8.0dip" android:text="@string/weeklysports_walking" android:drawableLeft="@drawable/shape_rect_green" style="@style/weeklysportsclassify" />
                <TextView android:layout_marginLeft="8.0dip" android:text="@string/weeklysports_riding" android:drawableLeft="@drawable/shape_rect_blue" style="@style/weeklysportsclassify" />
            </LinearLayout>
            <com.huami.watch.common.widget.HmClassifyBarChart android:layout_gravity="center_horizontal" android:id="@id/weeklysports_chartview" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="170.0dip" android:layout_height="92.0dip" android:layout_marginTop="3.0dip" />
            <View android:background="@color/widget_title_color_40white" android:layout_width="fill_parent" android:layout_height="0.70000005dip" android:layout_marginTop="23.0dip" />
        </LinearLayout>
    </LinearLayout>
</com.huami.watch.reports.widget.WeeklyActDistributionView>