<?xml version="1.0" encoding="utf-8"?>
<com.huami.watch.heartrate.view.AllDayHeartView android:id="@id/activity_heart_rate_full_day" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="18.699982sp" android:gravity="center_horizontal" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_all_day_heartrate" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/rate_list_time_color" android:layout_gravity="center_vertical" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_all_day_recently" />
            <TextView android:textSize="20.0sp" android:layout_gravity="center_vertical" android:id="@id/recent_rate" android:paddingRight="26.699982dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/today_heart_rate_value_def" />
            <TextView android:textSize="12.0sp" android:textColor="@color/rate_list_time_color" android:layout_gravity="center_vertical" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_all_day_quite" />
            <TextView android:textSize="20.0sp" android:layout_gravity="center_vertical" android:id="@id/reset_rate" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/today_heart_rate_value_def" />
        </LinearLayout>
        <com.huami.watch.common.widget.BarChart android:id="@id/chart" android:paddingLeft="10.0px" android:paddingRight="10.0px" android:layout_width="fill_parent" android:layout_height="78.0dip" />
        <LinearLayout android:gravity="center_horizontal" android:id="@id/all_day_heart_measure_button" android:background="@drawable/heart_view_mesure_button_style" android:layout_width="108.0dip" android:layout_height="32.0dip" android:layout_marginTop="10.0dip">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_marginRight="6.0dip" android:src="@drawable/health_heart_icon_star" />
            <TextView android:textSize="14.0sp" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/measure_heartrate_button_text" />
        </LinearLayout>
    </LinearLayout>
</com.huami.watch.heartrate.view.AllDayHeartView>