<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:custom="http://schemas.android.com/apk/res-auto/com.huami.watch.health">
    <FrameLayout android:id="@id/current_step_container" android:background="@color/transparent" android:paddingTop="@dimen/widget_size_screen_bottom_cut" android:layout_width="fill_parent" android:layout_height="fill_parent"> //进度条
<View android:id="@id/current_percent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/widget_size_arc_padding" /> //数据
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"> //数据中心
<TextView android:textSize="@dimen/widget_size_title_value" android:id="@id/step" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_size_title_margin_top" android:text="@string/widget_currentstep_title" android:shadowColor="@color/widget_color_shadow" android:shadowDy="@integer/widget_size_shadow_dy1" android:shadowRadius="@integer/widget_size_shadow_radius1" /> //步数
<RelativeLayout android:id="@id/current_step_parent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.299988dip">
                <com.huami.watch.health.widget.DataTextView android:textSize="@dimen/widget_size_step_value_size" android:textColor="@color/widget_step_value_color" android:id="@id/current_step_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:shadowColor="@color/widget_color_shadow" android:shadowDy="@integer/widget_size_shadow_dy0" android:shadowRadius="@integer/widget_size_shadow_radius0" android:fontFamily="lato" custom:layout_belowCenter="@id/step" />
                <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/color_heartView_title_text" android:id="@id/current_step_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.2999878dip" android:text="@string/widget_label_step_unit" android:shadowColor="@color/widget_color_shadow" android:shadowDy="@integer/widget_size_shadow_dy1" android:shadowRadius="@integer/widget_size_shadow_radius1" android:layout_toRightOf="@id/current_step_value" android:layout_alignBottom="@id/current_step_value" />
            </RelativeLayout> //分割线
<View android:id="@id/current_divideline" android:background="@color/color_detail_half_white" android:layout_width="120.0dip" android:layout_height="0.70000005dip" android:layout_marginTop="8.0dip" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <FrameLayout android:id="@id/sport_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/widget_size_tips_font" android:textColor="@color/color_heartView_title_text" android:layout_gravity="center_horizontal" android:id="@id/current_activities_notitle" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22.0dip" android:text="@string/widget_currentstep_activity_no" />
                    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/current_activities_ll" android:layout_width="wrap_content" android:layout_height="wrap_content"> //今日运动标题
<TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/color_heartView_title_text" android:id="@id/current_activities_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/widget_currentstep_activities" /> //今日运动项
<LinearLayout android:orientation="horizontal" android:id="@id/current_activities" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.299988dip" />
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/sport_container" android:layout_alignParentBottom="true">
                    <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/color_heartView_title_text" android:layout_gravity="center_horizontal" android:id="@id/current_sleep_notitle" android:paddingTop="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_currentstep_sleep_no" /> //昨日睡眠
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/current_sleep_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
                        <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/color_heartView_title_text" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_currentstep_sleep_title" />
                        <com.huami.watch.health.widget.DataTextView android:textSize="@dimen/widget_size_sleep_value_size" android:textColor="@color/widget_step_value_color" android:layout_gravity="center_vertical" android:id="@id/last_sleep_hour" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" />
                        <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/color_heartView_title_text" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_currentstep_sleep_hour" />
                        <com.huami.watch.health.widget.DataTextView android:textSize="@dimen/widget_size_sleep_value_size" android:textColor="@color/widget_step_value_color" android:layout_gravity="center_vertical" android:id="@id/last_sleep_min" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" />
                        <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/color_heartView_title_text" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_currentstep_sleep_min" />
                    </LinearLayout>
                </FrameLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
    <com.huami.watch.health.widget.SplashView android:id="@id/current_splash" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>