<?xml version="1.0" encoding="utf-8"?>
<com.huami.watch.reports.widget.CaloryView android:gravity="center_horizontal" android:background="@drawable/shape_bg" android:paddingTop="20.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:background="@drawable/data_weekly_consume_img_1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="24.0dip" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/data_weekly_consume_title_bg" />
            <TextView android:textSize="@dimen/widget_view_title_size" android:textColor="@color/widget_value_color_white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/widget_weeklyreports_totalcalory_title" />
        </FrameLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/weeklysports_totalcalory_parent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip">
            <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/widget_title_color_70white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_weeklyreports_totalcalory_front" />
            <com.huami.watch.health.widget.DataTextView android:textSize="@dimen/widget_size_cal_value" android:textColor="@color/widget_value_color_white" android:id="@id/weeklysports_totalcalory_value" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/widget_value_color_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weeklysports_totalcalories_unit" />
        </LinearLayout>
        <TextView android:textSize="@dimen/widget_size_unit_font" android:textColor="@color/widget_value_color_white" android:id="@id/weeklysports_calory_average_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.699982dip" />
        <com.huami.watch.common.widget.BarChart android:id="@id/weeklysports_calory_classifyChart" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:layout_width="@dimen/report_widget_size_classifychart_width" android:layout_height="@dimen/report_widget_size_classifychart_height" android:layout_marginTop="20.699982dip" />
    </LinearLayout>
</com.huami.watch.reports.widget.CaloryView>